--- a/package.json
+++ b/package.json
@@ -4,14 +4,29 @@
     "description": "CI/CD Demo with GitHub Actions",
     "main": "index.js",
     "scripts": {
-      "test": "jest",
-      "build": "mkdir -p dist && cp index.html dist/",
-      "start": "node server.js"
+        "test": "jest",
+        "build": "mkdir -p dist && cp index.html dist/",
+        "start": "node server.js"
     },
     "devDependencies": {
-      "jest": "^29.0.0"
+        "jest": "^29.7.0"
     },
     "dependencies": {
-      "express": "^4.18.0"
-    }
-  }
+        "express": "^4.21.2"
+    },
+    "directories": {
+        "test": "tests"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/matt-chlorophyll/cicd-practice.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "type": "commonjs",
+    "bugs": {
+        "url": "https://github.com/matt-chlorophyll/cicd-practice/issues"
+    },
+    "homepage": "https://github.com/matt-chlorophyll/cicd-practice#readme"
+}
