--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "jest",
-        "build": "mkdir -p dist && cp index.html dist/",
+        "build": "mkdir -p dist && cp index.html dist/ && cp app.js dist/",
         "start": "node server.js"
     },
     "devDependencies": {
